examples/kubeflow/mnist_with_tfjob/kubflowpach/kustomize/tensorboard/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tensorboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tensorboard/tensorboard/
    rewrite:
      uri: /
    route:
    - destination:
        host: tensorboard.$(namespace).svc.$(clusterDomain)
        port:
          number: 9000
